Fix calltoaction bug add padding to .calltoaction container so that it doesn't collapse

--- a/style.css
+++ b/style.css
@@ -75,7 +75,9 @@ border-radius: 30px;
 }
 
 .calltoaction {
+    padding: 50px;
     display: flex;
+    min-width: fit-content;
     gap: 100px;
     margin-top: 120px;
     justify-content: center;
